# ai-demo

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  settings.py
.claude/: settings.local.json
.github/workflows/: deploy.yml
agents/: __init__.py  base.py  cv_tailorer.py  job_search.py  summarizer.py
deploy/oracle/: .env.example  Caddyfile  README.md  docker-compose.yml  install.sh
frontend/: app.js  index.html  styles.css
hub/: __init__.py  config.py  main.py  run.py  telegram_dispatch.py
hub/agents/: __init__.py  base.py  cv_tailor.py  cv_tailor_text.py  general.py  general_agent.py  prayer.py  recipe.py  recipe_creator.py  weather.py  weather_agent.py
hub/core/: llm.py  prompts.py  security.py  tools.py
hub/prompts/: cv_tailor.txt  cv_tailor_task.txt  cv_tailor_text.txt  general.txt  recipe.txt  telegram_agent_cv.txt  telegram_agent_general.txt  telegram_agent_prayer.txt  telegram_agent_recipe.txt  telegram_agent_weather.txt  telegram_cv_usage.txt  telegram_help.txt  telegram_status_cv.txt  telegram_status_general.txt  telegram_status_prayer.txt  telegram_status_recipe.txt  telegram_status_weather.txt
hub/routers/: __init__.py  rest_agents.py  telegram_webhook.py
hub/services/: __init__.py  cv_file_tailor.py  cv_pipeline.py  job_scheduler.py  job_search.py  (+3 more)
prompts/: cv_tailorer.txt  job_search.txt
samples/: cover_letter.md  cv.md  job_description.txt
server/: __init__.py  app.py  config.py  paths.py  registry.py  run.py  schemas.py
tools/: __init__.py  document.py
(+35 files in other folders)
