[project]
name = "ai-demo"
version = "0.1.0"
description = "Minimal AI agent demo: tailor CV and cover letter to job descriptions"
requires-python = ">=3.13"
dependencies = [
    "strands-agents[litellm]>=1.30.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "pymupdf>=1.27.2",
    "python-docx>=1.1.2",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
]

[project.scripts]
ai-demo = "main:main"
ai-demo-server = "server.run:main"
ai-demo-hub = "hub.run:main"

[tool.ruff]
target-version = "py313"
line-length = 100
