[project]
name = "ai-demo"
version = "1.0.0"
description = "Multi-agent AI demo: CV Tailor, Weather, Recipe, Summarizer, Job Search + Telegram bot"
requires-python = ">=3.13"
dependencies = [
    "strands-agents[litellm]>=1.30.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "pymupdf>=1.27.2",
    "python-docx>=1.1.2",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "PyJWT>=2.10.0",
    "bcrypt>=4.2.0",
]

[project.scripts]
ai-demo-server = "hub.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hub"]

[tool.ruff]
target-version = "py313"
line-length = 100
